# blender-holographic-viewport

./: .gitignore  Taskfile.yaml  pyproject.toml
.zed/: settings.json
src/: __init__.py  blender_manifest.toml  operators.py  properties.py  ui.py  utils.py
src/addon/: __init__.py  blender_manifest.toml  operators.py  properties.py  ui.py
src/sidecar/: facetracking_reporter.py  tracker_sidecar.py
