[project]
name = "blender-holographic-viewport"
version = "0.1.0"
description = "Head-tracked off-axis projection for a holographic viewport effect in Blender."
authors = [
    { name = "H3mul", email = "phil.d324@gmail.com" }
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff",
    "blender-extension-builder",
    "fake-bpy-module-5.0",
]
