[project]
name = "blender-holographic-viewport"
version = "0.1.0"
description = "Head-tracked off-axis projection for a holographic viewport effect in Blender."
authors = [
    { name = "H3mul", email = "phil.d324@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "mediapipe==0.10.32",
    "opencv-python==4.13.0.92",
    "cv2-enumerate-cameras==1.3.3"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "blender-extension-builder",
    "fake-bpy-module-5.0",
]
